Added content and styles up to the tent img

--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
           <a href="https://5c5033c52f914b3ea93ea3cb61e65311.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
         </div>
      </header>
+     <main>
+       <div class="cellVideo">
+         <video muted loop autoplay>
+           <source src="resources/videos/excursion.mp4" type="video/mp4">
+           <source src="excursion.ogg" type="video/ogg">
+           Your browser does not support the video tag.
+          </video>
+        </div>  
+        <div>
+          <p class="sectionHeader">Your personal travel guide</p>
+          <p>Excursion remembers places you like, and recommends new points of interest around you.<p>
+            <img src="resources/images/camp.webp" alt="Camping Tent">
+        </div>     
+     </main>
   </body>
 </html>
