--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <div>
           <p class="sectionHeader">Your personal travel guide</p>
           <p>Excursion remembers places you like, and recommends new points of interest around you.<p>
-            <img src="resources/images/camp.webp" alt="Camping Tent">
+          <img class="images" src="resources/images/camp.webp" alt="Camping Tent">
+          <img class="images" src="resources/images/phone.webp" alt="Cellphone">
+          <p class="sectionHeader">Coming Soon for iPhone and Android</p>
+          <div class="link">
+            <a href="https://5c5033c52f914b3ea93ea3cb61e65311.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+          </div>
+          <p class="copyright">© Excursion</p>
         </div>     
      </main>
   </body>
