--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
         </div>
      </header>
      <main>
-       <div class="cellVideo">
+       <section class="cellVideo">
          <video muted loop autoplay>
            <source src="resources/videos/excursion.mp4" type="video/mp4">
            <source src="excursion.ogg" type="video/ogg">
            Your browser does not support the video tag.
           </video>
-        </div>  
-        <div>
+        </section>  
+        <section>
           <p class="sectionHeader">Your personal travel guide</p>
           <p>Excursion remembers places you like, and recommends new points of interest around you.<p>
           <img class="images" src="resources/images/camp.webp" alt="Camping Tent">
           <img class="images" src="resources/images/phone.webp" alt="Cellphone">
           <p class="sectionHeader">Coming Soon for iPhone and Android</p>
-          <div class="link">
-            <a href="https://5c5033c52f914b3ea93ea3cb61e65311.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
-          </div>
-          <p class="copyright">© Excursion</p>
-        </div>     
-     </main>
+        </section> 
+      </main>       
+    <footer>
+      <p class="copyright">© Excursion</p>
+      <div class="link">
+        <a href="https://5c5033c52f914b3ea93ea3cb61e65311.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+      </div>
+    </footer>
   </body>
 </html>
